[project]
name = "smartgrocerypos"
version = "1.5.0"
description = "Smart Grocery POS System"
dependencies = ["flet>=0.21.0"]

[tool.flet]
app.module = "main"
product = "Smart Grocery POS"
org = "com.smartgrocery.pos"

[tool.flet.android]
permissions = ["camera", "write_external_storage", "read_external_storage"]
